tests/conformance/syntax/positive/reserved_words_valid.ditt
module Syntax.ReservedValid where

postulate C : Cat
module1 (x : C) : C = x
