tests/conformance/syntax/negative/where_block_invalid.ditt
module Syntax.WhereBlockBad where

postulate C : Cat
id (x : C) : C = x where helper : C = x
